--- a/residential.html
+++ b/residential.html
@@ -80,82 +80,111 @@
   </section>
 
   <!-- PROJECTS -->
-  <main id="projects" class="section">
-    <div class="container">
+<main id="projects" class="section">
+  <div class="container">
 
-      <h2>Residential Projects</h2>
-      <p class="sub">Recent residential remodel work.</p>
+    <h2>Residential Projects</h2>
+    <p class="sub">Recent residential remodel work.</p>
 
-      <!-- BASEMENT -->
-      <section class="proj" data-slider>
-        <div class="proj-head">
-          <h3>Basement Remodel</h3>
+    <!-- ================= KITCHEN ================= -->
+    <section class="proj" data-slider>
+      <div class="proj-head">
+        <h3>Kitchen Remodel</h3>
+        <p class="proj-meta">Cabinetry, layout redesign, appliance integration</p>
+      </div>
+
+      <div class="slider">
+        <button type="button" class="slider-btn prev" data-prev>‹</button>
+
+        <div class="slider-track" data-track>
+          <img src="assets/projects/resi-kitchen-01.jpg" alt="Kitchen remodel 1">
+          <img src="assets/projects/resi-kitchen-02.jpg" alt="Kitchen remodel 2">
+          <img src="assets/projects/resi-kitchen-03.jpg" alt="Kitchen remodel 3">
+          <img src="assets/projects/resi-kitchen-04.jpg" alt="Kitchen remodel 4">
+          <img src="assets/projects/resi-kitchen-05.jpg" alt="Kitchen remodel 5">
+          <img src="assets/projects/resi-kitchen-06.jpg" alt="Kitchen remodel 6">
+          <img src="assets/projects/resi-kitchen-07.jpg" alt="Kitchen remodel 7">
+          <img src="assets/projects/resi-kitchen-08.jpg" alt="Kitchen remodel 8">
+          <img src="assets/projects/resi-kitchen-09.jpg" alt="Kitchen remodel 9">
+          <img src="assets/projects/resi-kitchen-10.jpg" alt="Kitchen remodel 10">
         </div>
 
-        <div class="slider">
-          <button class="slider-btn prev" data-prev>‹</button>
+        <button type="button" class="slider-btn next" data-next>›</button>
+      </div>
+    </section>
 
-          <div class="slider-track" data-track>
-            <img src="assets/projects/resi-basement-01.jpg" alt="">
-            <img src="assets/projects/resi-basement-02.jpg" alt="">
-            <img src="assets/projects/resi-basement-03.jpg" alt="">
-            <img src="assets/projects/resi-basement-04.jpg" alt="">
-            <img src="assets/projects/resi-basement-05.jpg" alt="">
-            <img src="assets/projects/resi-basement-06.jpg" alt="">
-            <img src="assets/projects/resi-basement-07.jpg" alt="">
-          </div>
 
-          <button class="slider-btn next" data-next>›</button>
-        </div>
-      </section>
+    <!-- ================= BASEMENT ================= -->
+    <section class="proj" data-slider>
+      <div class="proj-head">
+        <h3>Basement Remodel</h3>
+        <p class="proj-meta">Full lower-level build-out and finish</p>
+      </div>
 
-      <!-- BATHROOM -->
-      <section class="proj" data-slider>
-        <div class="proj-head">
-          <h3>Bathroom Remodel</h3>
-        </div>
+      <div class="slider">
+        <button type="button" class="slider-btn prev" data-prev>‹</button>
 
-        <div class="slider">
-          <button class="slider-btn prev" data-prev>‹</button>
-
-          <div class="slider-track" data-track>
-            <img src="assets/projects/resi-bath-01.jpg" alt="">
-            <img src="assets/projects/resi-bath-02.jpg" alt="">
-            <img src="assets/projects/resi-bath-03.jpg" alt="">
-          </div>
-
-          <button class="slider-btn next" data-next>›</button>
-        </div>
-      </section>
-
-      <!-- KITCHEN -->
-      <section class="proj" data-slider>
-        <div class="proj-head">
-          <h3>Kitchen Remodel</h3>
+        <div class="slider-track" data-track>
+          <img src="assets/projects/resi-basement-01.jpg" alt="Basement remodel 1">
+          <img src="assets/projects/resi-basement-02.jpg" alt="Basement remodel 2">
+          <img src="assets/projects/resi-basement-03.jpg" alt="Basement remodel 3">
+          <img src="assets/projects/resi-basement-04.jpg" alt="Basement remodel 4">
+          <img src="assets/projects/resi-basement-05.jpg" alt="Basement remodel 5">
+          <img src="assets/projects/resi-basement-06.jpg" alt="Basement remodel 6">
+          <img src="assets/projects/resi-basement-07.jpg" alt="Basement remodel 7">
         </div>
 
-        <div class="slider">
-          <button class="slider-btn prev" data-prev>‹</button>
+        <button type="button" class="slider-btn next" data-next>›</button>
+      </div>
+    </section>
 
-          <div class="slider-track" data-track>
-            <img src="assets/projects/resi-kitchen-01.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-02.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-03.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-04.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-05.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-06.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-07.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-08.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-09.jpg" alt="">
-            <img src="assets/projects/resi-kitchen-10.jpg" alt="">
-          </div>
 
-          <button class="slider-btn next" data-next>›</button>
+    <!-- ================= DECKS ================= -->
+    <section class="proj" data-slider>
+      <div class="proj-head">
+        <h3>Deck Construction & Remodel</h3>
+        <p class="proj-meta">Exterior framing, composite decking, rail systems</p>
+      </div>
+
+      <div class="slider">
+        <button type="button" class="slider-btn prev" data-prev>‹</button>
+
+        <div class="slider-track" data-track>
+          <img src="assets/projects/resi-deck-01.jpg" alt="Deck remodel 1">
+          <img src="assets/projects/resi-deck-02.jpg" alt="Deck remodel 2">
+          <img src="assets/projects/resi-deck-03.jpg" alt="Deck remodel 3">
+          <img src="assets/projects/resi-deck-04.jpg" alt="Deck remodel 4">
+          <img src="assets/projects/resi-deck-05.jpg" alt="Deck remodel 5">
         </div>
-      </section>
 
-    </div>
-  </main>
+        <button type="button" class="slider-btn next" data-next>›</button>
+      </div>
+    </section>
+
+
+    <!-- ================= BATHROOM ================= -->
+    <section class="proj" data-slider>
+      <div class="proj-head">
+        <h3>Bathroom Remodel</h3>
+        <p class="proj-meta">Custom tile, plumbing coordination, finish upgrades</p>
+      </div>
+
+      <div class="slider">
+        <button type="button" class="slider-btn prev" data-prev>‹</button>
+
+        <div class="slider-track" data-track>
+          <img src="assets/projects/resi-bath-01.jpg" alt="Bathroom remodel 1">
+          <img src="assets/projects/resi-bath-02.jpg" alt="Bathroom remodel 2">
+          <img src="assets/projects/resi-bath-03.jpg" alt="Bathroom remodel 3">
+        </div>
+
+        <button type="button" class="slider-btn next" data-next>›</button>
+      </div>
+    </section>
+
+  </div>
+</main>
+
 
   <footer class="footer">
     <div class="container">
